@twal/styles/base/nav.scss
/**
* Timeline css
**/

@mixin tick($bg-color: $primarycolor, $border-color: $light, $border-size: 3px) {
  content: '';
  position: absolute;
  text-align: center;
  left: 51px;
  align-self: center;
  background: $bg-color;
  border: $border-size solid $border-color;
  box-sizing: content-box;
  z-index: 2;
}

@mixin tickround($bg-color: $primarycolor, $border-color: $light) {
  border-radius: 75%;
  width: 15px;
  height: 15px;
  @include tick($bg-color, $border-color);
}

@mixin tickstick($bg-color: $grey, $border-color: $light) {
  width: 20px;
  height: 4px;
  transform: rotate(0deg);
  @include tick($bg-color, $border-color, 0);
}

@mixin ticksquare($bg-color: $primarycolor, $border-color: $light) {
  border-radius: 4px;
  width: 15px;
  height: 15px;
  transform: rotate(0deg);
  @include tick($bg-color, $border-color);
}

@mixin tickdiamond($bg-color: $primarycolor, $border-color: $light) {
  width: 15px;
  height: 15px;
  transform: rotate(45deg);
  border-radius: 4px;
  @include tick($bg-color, $border-color);
}

.timeline {
  li {
    &:before {
      position: absolute;
      content: '';
      height: 75px;
      width: 1px;
      left: 59px;
      display: inline-block;
      border-right: 3px solid $grey;
      z-index: 1;
    }
    .submenu-link {
      &:before {
        @include tickdiamond;
      }
      &.active {
        &:before {
          @include tickdiamond($light, $light);
        }
      }
      padding-left: 95px;
    }
  }
}

.sidemenu {
  li {
    a {
      justify-content: center;
    }
  }
}
.timeline,
.sidemenu {
  border-right: 4px solid rgba($primarycolor, 1);
  height: 100%;
  overflow: hidden;
  position: relative;

  h2 {
    min-height: 75px;
    text-align: center;
    font-family: $secondaryfont;
    font-size: 1.7em;
    background: white;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 25px 15px;
  }
  ul {
    margin-bottom: 150px;
    li {
      min-height: 75px;
      align-items: center;
      display: flex;
      justify-content: center;
      position: relative;
      &:nth-child(2n + 1) {
        background: rgba($primarycolor, 0.1);
      }
      a {
        width: 100%;
        text-decoration: none;
        color: $dark;
        align-self: stretch;
        display: flex;
        align-items: center;
        display: flex;
        justify-content: center;
        position: relative;
        &:nth-child(2n + 1) {
          background: rgba($primarycolor, 0.1);
        }
        &.active {
          background: $primarycolor;
          color: $light;
        }
        &:visited {
          color: none;
        }
      }
    }
  }
}

.bottom-nav {
  position: fixed;
  bottom: 20px;
  z-index: 9997;
  width: 90%;
  height: 60px;
  padding: 0 100px;
  left: 50%;
  transform: translateX(-50%);
  transition: all 0.5s ease-in-out;
  &.togglenav {
    bottom: -$bottomNavHeight;
  }
  ul {
    width: 100%;
    display: flex;
    margin: auto;
    height: 100%;
    justify-content: center;
    align-items: center;
    border-radius: 75px;
    // overflow: hidden;

    li {
      flex: 1 1 0;
      text-align: center;
      align-self: stretch;
      margin-left: 5px;
      &:first-child {
        border-left: none;
        margin-left: 0px;
      }
      &:first-of-type a {
        border-radius: 75px 0 0 75px;
      }
      &:last-of-type a {
        border-radius: 0 75px 75px 0;
      }
      a {
        @include box-shadow;
        background: $light;
        font-size: 1.5vw;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        text-decoration: none;
        color: $dark;
        &:visited,
        &:focus,
        &:active {
          color: $dark;
        }
        &.active {
          background-color: $secondarycolor;
          color: $light;
        }
      }
    }
  }
}
.toggle-bottom-nav {
  position: fixed;
  z-index: 9996;
  bottom: $bottomNavHeight;
  background: $red;
  color: $light;
  display: block;
  width: 60px;
  left: 50%;
  transform: translateX(-50%);
  height: 30px;
  line-height: 30px;
  text-align: center;
  border-top-left-radius: 60px * 2;
  border-top-right-radius: 60px * 2;
  cursor: pointer;
  transition: all 0.5s ease-in-out;
  &.togglenav {
    bottom: 0;
  }
}

